# VirtualLab-Copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: seed_db.py
src/: __init__.py  config.py
src/analysis/: __init__.py  cohort.py  stats.py  summary.py
src/api/: __init__.py  main.py  schemas.py
src/data/: __init__.py  synthetic.py
src/database/: __init__.py  repo.py  schema.py
src/frontend/: app.py
src/parser/: __init__.py  intents.py  parser.py  rules.py
src/visualization/: __init__.py  plots.py
tests/: conftest.py  test_api.py  test_cohort.py  test_parser.py
