[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtuallab-copilot"
version = "0.1.0"
description = "AI-assisted translational genomics research copilot prototype (synthetic multiple-myeloma data)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "VirtualLab-Copilot contributors" }]
keywords = ["genomics", "translational", "fastapi", "streamlit", "rag", "cohort-discovery"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
